# vmaf

./: CMakeLists.txt
.github/workflows/: ffmpeg.yml  libvmaf.yml  main.yml
libvmaf/doc/: CMakeLists.txt
libvmaf/include/: CMakeLists.txt
libvmaf/include/libvmaf/: CMakeLists.txt
libvmaf/src/: CMakeLists.txt  libvmaf.cpp
libvmaf/tools/: CMakeLists.txt
